implement login screen

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Rock Paper Scissors Game</string>
+    <string name="registration">Registration</string>
+    <string name="register">Register</string>
+    <string name="email">E-mail</string>
+    <string name="username">Username</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="login">Login</string>
+    <string name="invalid_email">The email address is invalid</string>
+    <string name="weak_password">Password must be at least 8 characters long and contain an uppercase letter, a number, and a special character.</string>
+    <string name="email_exists">The email address is already in use by another account</string>
+    <string name="username_exists">The username is already in use by another account</string>
+    <string name="confirm_password_not_match">Confirm password doesn\'t match password</string>
+    <string name="generic_error_message">Sorry, something went wrong.</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="invalid_email_password">Incorrect email or password.</string>
 </resources>
