--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="generic_error_message">Sorry, something went wrong.</string>
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="invalid_email_password">Incorrect email or password.</string>
+    <string name="join_in_a_game">Join %1$s in a game!</string>
 </resources>
