--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="dont_have_an_account">Don\'t have an account?</string>
     <string name="invalid_email_password">Incorrect email or password.</string>
     <string name="join_in_a_game">Join %1$s in a game!</string>
+    <string name="your_game">Your game</string>
+    <string name="this_game_is_in_progress">This game is in progress!</string>
+    <string name="waiting_for_another_player">Waiting for another player...</string>
 </resources>
